update it-IT translation

--- a/publican/Users_Guide/it-IT/Command_summary.po
+++ b/publican/Users_Guide/it-IT/Command_summary.po
@@ -89,8 +89,8 @@ msgid "<option>--quiet</option>"
 msgstr "<option>--quiet</option>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "disable all logging."
+#, no-c-format
+msgid "disables all logging."
 msgstr "disabilita tutti i messaggi di log"
 
 #. Tag: title
@@ -244,8 +244,8 @@ msgid "--quiet"
 msgstr ""
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "disable all logging."
+#, no-c-format
+msgid "disables all logging."
 msgstr "disabilita tutti i messaggi di log"
 
 #. Tag: term
@@ -319,8 +319,8 @@ msgid "specifies the directory to source <application>Publican</application> fil
 msgstr ""
 
 #. Tag: term
-#, no-c-format
-msgid "<command>publican clean</command>"
+#, no-c-format, fuzzy
+msgid "<command>publican rename</command>"
 msgstr "<command>publican clean</command>"
 
 #. Tag: para
@@ -350,8 +350,8 @@ msgstr "rimuove le copie locali di libri remoti, parte di un set"
 
 #. Tag: term
 #, no-c-format, fuzzy
-msgid "<command>publican migrate_site</command>"
-msgstr "<command>publican create</command>"
+msgid "<command>publican rename</command>"
+msgstr "<command>publican clean</command>"
 
 #. Tag: para
 #, no-c-format
@@ -559,7 +559,7 @@ msgid "a comma-separated list of languages for which the report will be generate
 msgstr "una lista di lingue, separate da virgole"
 
 #. Tag: term
-#, no-c-format, fuzzy
+#, no-c-format
 msgid "<command>publican migrate_site</command>"
 msgstr "<command>publican create</command>"
 
@@ -644,8 +644,8 @@ msgid "builds the package as a binary RPM package rather than a source RPM packa
 msgstr "crea il pacchetto RPM binario invece del pacchetto SRPM sorgente"
 
 #. Tag: term
-#, no-c-format
-msgid "publican print_banned"
+#, no-c-format, fuzzy
+msgid "publican print_unused"
 msgstr "publican print_banned"
 
 #. Tag: para
@@ -675,22 +675,22 @@ msgstr "viusalizza la struttura ad albero dei file XML di un documento"
 
 #. Tag: term
 #, no-c-format, fuzzy
-msgid "publican print_unused_images"
-msgstr "publican print_unused"
+msgid "publican print_unused"
+msgstr "publican print_banned"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "prints a list of the image files <emphasis>not</emphasis> referenced by an <sgmltag>&lt;imagedata&gt;</sgmltag> tag in a book, article, or set."
+#, no-c-format
+msgid "prints a list of the XML files <emphasis>not</emphasis> included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
 msgstr "visualizza l'elenco dei file XML <emphasis>non</emphasis> inclusi in tag <sgmltag>&lt;xi:include&gt;</sgmltag> in un libro, articolo o set"
 
 #. Tag: term
-#, no-c-format, fuzzy
+#, no-c-format
 msgid "publican print_unused_images"
 msgstr "publican print_unused"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "prints a list of the image files <emphasis>not</emphasis> referenced by an <sgmltag>&lt;imagedata&gt;</sgmltag> tag in a book, article, or set."
+#, no-c-format
+msgid "prints a list of the XML files <emphasis>not</emphasis> included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
 msgstr "visualizza l'elenco dei file XML <emphasis>non</emphasis> inclusi in tag <sgmltag>&lt;xi:include&gt;</sgmltag> in un libro, articolo o set"
 
 #. Tag: term
@@ -709,9 +709,9 @@ msgid "the language of the document to remove (mandatory)."
 msgstr "il documento in lingua da rimuovere (necessario)"
 
 #. Tag: term
-#, no-c-format
-msgid "<command>publican add_revision</command>"
-msgstr "<command>publican rename</command>"
+#, no-c-format, fuzzy
+msgid "<command>publican rename</command>"
+msgstr "<command>publican clean</command>"
 
 #. Tag: para
 #, no-c-format
@@ -719,7 +719,7 @@ msgid "renames a document. Options:"
 msgstr "rinomina un documento. Opzioni:"
 
 #. Tag: para
-#, no-c-format, fuzzy
+#, no-c-format
 msgid "the new title for the document."
 msgstr "il nuovo titolo per il documento"
 
