--- a/publican/Users_Guide/it-IT/Drupal_Import.po
+++ b/publican/Users_Guide/it-IT/Drupal_Import.po
@@ -1,4 +1,4 @@
-# 
+#
 # AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
@@ -39,7 +39,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cd User_Guide/</command>\n"
+msgid ""
+"<command>cd User_Guide/</command>\n"
 "<command>publican build --langs en-US --formats=drupal-book</command>"
 msgstr ""
 
