--- a/publican/Users_Guide/it-IT/Publican_Defaults.po
+++ b/publican/Users_Guide/it-IT/Publican_Defaults.po
@@ -1,4 +1,4 @@
-# 
+#
 # AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
@@ -74,14 +74,14 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "\n"
+msgid ""
+"\n"
 "$ echo 'formats: \"html,html-single,pdf,txt\"' &gt;&gt; ~/.publican.cfg\n"
 "$ echo 'langs: \"en-US\"' &gt;&gt; ~/.publican.cfg\n"
 "$ publican build\n"
 "Setting up en-US\n"
 "[...]\n"
 "	Finished txt\n"
-""
 msgstr ""
 
 #. Tag: para
@@ -96,12 +96,12 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "\n"
+msgid ""
+"\n"
 "$ echo 'firstname: \"Dude\"' &gt;&gt; ~/.publican.cfg \n"
 "$ echo 'surname: \"McPants\"' &gt;&gt; ~/.publican.cfg \n"
 "$ echo 'email: \"dude.mcpants@awesome.com\"' &gt;&gt; ~/.publican.cfg \n"
 "$ publican add_revision --member \"Updated examples in chapter 2.\" \\\n"
 "--member \"Removed obsolete example in sect 4.1\"\n"
-""
 msgstr ""
 
