--- a/publican/Users_Guide/it-IT/Publican_cfg_parameters.po
+++ b/publican/Users_Guide/it-IT/Publican_cfg_parameters.po
@@ -68,8 +68,8 @@ msgid "the edition number for this documentation, set by the <option>--edition</
 msgstr "il numero di edizione della documentazione, impostato con l'opzione <option>--edition</option>"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>dtd_type</parameter>"
+#, no-c-format
+msgid "<parameter>type</parameter>"
 msgstr "<parameter>type</parameter>"
 
 #. Tag: para
@@ -268,8 +268,8 @@ msgid "a package that the desktop package requires, for example, a documentation
 msgstr "un pacchetto richiesto dal pacchetto desktop, per esempio, un pacchetto di menu del desktop, per documentazione. Fare riferimento alla <xref linkend=\"desktop_menus\" />."
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>dtd_uri</parameter>"
+#, no-c-format
+msgid "<parameter>dtdver</parameter>"
 msgstr "<parameter>dtdver</parameter>"
 
 #. Tag: para
@@ -278,8 +278,8 @@ msgid "the version of the DocBook XML <firstterm>Document Type Definition</first
 msgstr "la versione del <firstterm>DTD</firstterm> (Document Type Definition) di DocBook XML su cui si basa il progetto. (Per impostazione: <literal>4.5</literal>)"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>dtd_type</parameter>"
+#, no-c-format
+msgid "<parameter>type</parameter>"
 msgstr "<parameter>type</parameter>"
 
 #. Tag: para
@@ -293,8 +293,8 @@ msgid "This parameter is only permitted in a brand."
 msgstr ""
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>dtd_uri</parameter>"
+#, no-c-format
+msgid "<parameter>dtdver</parameter>"
 msgstr "<parameter>dtdver</parameter>"
 
 #. Tag: para
@@ -353,8 +353,8 @@ msgid "translations to ignore."
 msgstr "traduzioni da ignorare"
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>info_file</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>mainfile</parameter>"
 msgstr "<parameter>mainfile</parameter>"
 
 #. Tag: para
@@ -363,8 +363,8 @@ msgid "override the default Info file. Use the full filename without the path."
 msgstr ""
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>license</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>release</parameter>"
 msgstr "<parameter>license</parameter>"
 
 #. Tag: para
@@ -373,8 +373,8 @@ msgid "the license this package uses. (Default: GNU Free Documentation License).
 msgstr "la licenza usata dal pacchetto. (Per impostazione: GNU Free Documentation License)"
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>info_file</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>mainfile</parameter>"
 msgstr "<parameter>mainfile</parameter>"
 
 #. Tag: para
@@ -408,9 +408,9 @@ msgid "the desktop menu category (as defined by a corresponding <filename>.menu<
 msgstr "la categoria del desktop menu (come definito dal file <filename>.menu</filename> corrispondente), in cui far comparire un documento quando installato da un pacchetto RPM per desktop. Fare riferimento alla <xref linkend=\"desktop_menus\" />."
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>sort_order</parameter>"
-msgstr "<parameter>os_ver</parameter>"
+#, no-c-format
+msgid "<parameter>os_ver</parameter>"
+msgstr "<parameter>src_url</parameter>"
 
 #. Tag: para
 #, no-c-format
@@ -429,8 +429,8 @@ msgstr "URL del prodotto cui si applica il documento. (Per impostazione: <litera
 
 #. Tag: term
 #, no-c-format, fuzzy
-msgid "<parameter>rev_file</parameter>"
-msgstr "<parameter>release</parameter>"
+msgid "<parameter>release</parameter>"
+msgstr "<parameter>license</parameter>"
 
 #. Tag: para
 #, no-c-format
@@ -448,7 +448,7 @@ msgid "the repository from which to fetch remote books that form part of a distr
 msgstr "il repository da cui scaricare libri remoti, parte di un set distribuito."
 
 #. Tag: term
-#, no-c-format, fuzzy
+#, no-c-format
 msgid "<parameter>rev_file</parameter>"
 msgstr "<parameter>release</parameter>"
 
@@ -488,7 +488,7 @@ msgid "whether <application>Publican</application> reports unknown tags when pro
 msgstr "specifica se segnalare i tag sconosciuti durante l'elaborazione degli XML. (Per impostazione: <literal>1</literal> — tag sconosciuti segnalati)"
 
 #. Tag: term
-#, no-c-format, fuzzy
+#, no-c-format
 msgid "<parameter>sort_order</parameter>"
 msgstr "<parameter>os_ver</parameter>"
 
@@ -499,7 +499,7 @@ msgstr ""
 
 #. Tag: term
 #, no-c-format
-msgid "<parameter>src_url</parameter>"
+msgid "<parameter>os_ver</parameter>"
 msgstr "<parameter>src_url</parameter>"
 
 #. Tag: para
