--- a/publican/Users_Guide/it-IT/Installing_Publican_OpenSuse.po
+++ b/publican/Users_Guide/it-IT/Installing_Publican_OpenSuse.po
@@ -1,4 +1,4 @@
-# 
+#
 # AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
@@ -89,7 +89,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo zypper install perl-Config-Simple perl-DateTime \\\n"
+msgid ""
+"<command>sudo zypper install perl-Config-Simple perl-DateTime \\\n"
 "perl-DateTime-Format-DateParse perl-DBD-SQLite perl-DBI \\\n"
 "perl-File-Find-Rule perl-File-Which perl-HTML-Format \\\n"
 "perl-Locale-MakeText-Gettext perl-Template-Toolkit \\\n"
@@ -109,7 +110,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo sh\n"
+msgid ""
+"<command>sudo sh\n"
 "cpan File::pushd File::Copy::Recursive Locale::PO pp \\\n"
 "Syntax::Highlight::Engine::Kate XML::TreeBuilder\n"
 "exit\n"
@@ -123,7 +125,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cd ~\n"
+msgid ""
+"<command>cd ~\n"
 "mkdir -p SourceCode/publican\n"
 "cd SourceCode/publican\n"
 "svn checkout http://svn.fedorahosted.org/svn/publican/branches/publican-2x ./\n"
@@ -137,7 +140,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>perl Build.PL\n"
+msgid ""
+"<command>perl Build.PL\n"
 "</command>"
 msgstr ""
 
@@ -148,7 +152,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "perl Build.PL\n"
+msgid ""
+"perl Build.PL\n"
 "WARNING: the following files are missing in your kit:\n"
 "        META.yml\n"
 "Please inform the author.\n"
@@ -164,7 +169,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo sh\n"
+msgid ""
+"<command>sudo sh\n"
 "cpan File::pushd\n"
 "exit\n"
 "</command>"
@@ -177,7 +183,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>./Build\n"
+msgid ""
+"<command>./Build\n"
 "</command>"
 msgstr ""
 
@@ -198,7 +205,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>./Build test\n"
+msgid ""
+"<command>./Build test\n"
 "</command>"
 msgstr ""
 
@@ -209,7 +217,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "Test Summary Report\n"
+msgid ""
+"Test Summary Report\n"
 "-------------------\n"
 "t/910.publican.Users_Guide.t (Wstat: 256 Tests: 5 Failed: 1)\n"
 "  Failed test:  5\n"
@@ -220,7 +229,6 @@ msgid "Test Summary Report\n"
 "Files=10, Tests=68, 420 wallclock secs ( 0.31 usr  0.17 sys + 246.87 cusr 18.73 csys = 266.08 CPU)\n"
 "Result: FAIL\n"
 "Failed 2/10 test programs. 2/68 subtests failed.\n"
-""
 msgstr ""
 
 #. Tag: para
@@ -250,7 +258,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>JFEARN=http://jfearn.fedorapeople.org/wkhtmltopdf/f15\n"
+msgid ""
+"<command>JFEARN=http://jfearn.fedorapeople.org/wkhtmltopdf/f15\n"
 "MYSYSTEM=i686\n"
 "## For 64bit system use MYSYSTEM=x86_64 instead.\n"
 "wget $JFEARN/$MYSYSTEM/wkhtmltopdf-qt-4.7.1-1.git20110804.fc15.i686.rpm\n"
@@ -270,7 +279,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo sh\n"
+msgid ""
+"<command>sudo sh\n"
 "rpm -ivh wkhtmltopdf-qt*\n"
 "rpm -ivh --nodeps wkhtmltopdf-0*\n"
 "exit\n"
@@ -294,7 +304,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo sh\n"
+msgid ""
+"<command>sudo sh\n"
 "./Build test\n"
 "exit\n"
 "</command>"
@@ -312,7 +323,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican create --type=book --product=testing --version=1.2.3 --name=TestPublican</command>\n"
+msgid ""
+"<command>publican create --type=book --product=testing --version=1.2.3 --name=TestPublican</command>\n"
 "  Processing file en-US/Author_Group.xml -&gt; en-US/Author_Group.xml\n"
 "  Processing file en-US/Book_Info.xml -&gt; en-US/Book_Info.xml\n"
 "  Processing file en-US/Chapter.xml -&gt; en-US/Chapter.xml\n"
@@ -322,7 +334,6 @@ msgid "<command>publican create --type=book --product=testing --version=1.2.3 --
 "\n"
 "<command>cd TestPublican/\n"
 "publican build --lang=all --formats=html,html-single,html-desktop,txt,pdf,epub</command>\n"
-""
 msgstr ""
 
 #. Tag: para
@@ -332,7 +343,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "runtime error: file /usr/share/publican/xsl/epub.xsl element choose\n"
+msgid ""
+"runtime error: file /usr/share/publican/xsl/epub.xsl element choose\n"
 "Variable 'epub.embedded.fonts' has not been declared.\n"
 " at /usr/lib/perl5/site_perl/5.14.2/Publican/Builder.pm line 915"
 msgstr ""
