--- a/publican/Users_Guide/it-IT/Publican_Commands.po
+++ b/publican/Users_Guide/it-IT/Publican_Commands.po
@@ -258,8 +258,8 @@ msgid "creates a new brand. Refer to <xref linkend=\"sect-Users_Guide-Creating_a
 msgstr "crea un nuovo brand. Fare riferimento alla <xref linkend=\"sect-Users_Guide-Creating_a_brand\" /> per i dettagli."
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "migrate_site"
+#, no-c-format
+msgid "create_site"
 msgstr "create_site"
 
 #. Tag: para
@@ -308,8 +308,8 @@ msgid "generates a translation report for the language specified by <replaceable
 msgstr "genera un report statistico di traduzione per la lingua specificata da <replaceable>codice_lingua</replaceable>. Per ogni file PO generato da <application>Publican</application>, una tabella mostra il numero delle stringhe non tradotte in tutti i <literal>msgid</literal>; il numero delle stringhe fuzzy (conteggia le stringhe contenute in <literal>msgid</literal>, il cui contenuto è variato dall'ultima generazione dei POT), ed il numero delle stringhe tradotte, coincidente, a traduzione avvenuta, con il numero delle stringhe contenute nel <literal>msgid</literal>."
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "migrate_site"
+#, no-c-format
+msgid "create_site"
 msgstr "create_site"
 
 #. Tag: para
@@ -353,8 +353,8 @@ msgid "print_tree"
 msgstr "print_tree"
 
 #. Tag: para
-#, no-c-format
-msgid "prints a tree of the XML files included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
+#, no-c-format, fuzzy
+msgid "prints a list of the XML files <emphasis>not</emphasis> included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
 msgstr "visualizza la struttura ad albero dei file XML inclusi, con il tag <sgmltag>&lt;xi:include&gt;</sgmltag>, in un libro, articolo o set."
 
 #. Tag: term
@@ -364,8 +364,8 @@ msgstr "print_unused"
 
 #. Tag: para
 #, no-c-format, fuzzy
-msgid "prints a list of the image files <emphasis>not</emphasis> referenced by an <sgmltag>&lt;imagedata&gt;</sgmltag> tag in a book, article, or set."
-msgstr "visualizza l'elenco dei file XML <emphasis>non</emphasis> inclusi, con il tag <sgmltag>&lt;xi:include&gt;</sgmltag>, in un libro, articolo o set."
+msgid "prints a list of the XML files <emphasis>not</emphasis> included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
+msgstr "visualizza la struttura ad albero dei file XML inclusi, con il tag <sgmltag>&lt;xi:include&gt;</sgmltag>, in un libro, articolo o set."
 
 #. Tag: term
 #, no-c-format
@@ -373,7 +373,7 @@ msgid "publican print_unused_images"
 msgstr ""
 
 #. Tag: para
-#, no-c-format, fuzzy
+#, no-c-format
 msgid "prints a list of the image files <emphasis>not</emphasis> referenced by an <sgmltag>&lt;imagedata&gt;</sgmltag> tag in a book, article, or set."
 msgstr "visualizza l'elenco dei file XML <emphasis>non</emphasis> inclusi, con il tag <sgmltag>&lt;xi:include&gt;</sgmltag>, in un libro, articolo o set."
 
