--- a/publican/Changes
+++ b/publican/Changes
@@ -7,6 +7,7 @@
   - Fix multiple calls to update_po breaking packaging. BZ #891167
   - Add website labels and translations. BZ #979885
   - Add orgname to block/inline code. BZ #872955
+  - Fix get_keywords not using correct info file. BZ #957956
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
