Fix pre border in PDF. BZ #905752

--- a/publican/Changes
+++ b/publican/Changes
@@ -9,6 +9,7 @@
   - Add orgname to block/inline code. BZ #872955
   - Fix get_keywords not using correct info file. BZ #957956
   - Improve web print CSS. BZ #927513
+  - Fox pre border in PDF. BZ #905752
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
