Apply title style patch from Jaromir Hradilek. BZ #924518

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,4 @@
-3.1.6 UNRELEASED
+3.2.0 UNRELEASED
   - Fix typo in common content BZ #952490
   - Stop menu bouncing. BZ #953716
   - Fix ID missing from admonitions. BZ #966494
@@ -14,6 +14,7 @@
   - Fix step first child style. BZ #971221
   - Fix long link word wrap in PDF. BZ #923481
   - Support case-insensitive "language" attribute. BZ #919474
+  - Apply title style patch from Jaromir Hradilek. BZ #924518
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
