Note fix for BZ #974918

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,5 +1,5 @@
 3.2.0 UNRELEASED
-  - Fix typo in common content BZ #952490
+  - Fix typos in common content BZ #952490 #974918
   - Stop menu bouncing. BZ #953716
   - Fix ID missing from admonitions. BZ #966494
   - Support corpauthor for PDF. BZ #908666
