Fix ID missing from translated Revision History. BZ #911462

--- a/publican/Users_Guide/it-IT/Command_summary.po
+++ b/publican/Users_Guide/it-IT/Command_summary.po
@@ -89,8 +89,8 @@ msgid "<option>--quiet</option>"
 msgstr "<option>--quiet</option>"
 
 #. Tag: para
-#, no-c-format
-msgid "disables all logging."
+#, no-c-format, fuzzy
+msgid "disable all logging."
 msgstr "disabilita tutti i messaggi di log"
 
 #. Tag: title
@@ -244,8 +244,8 @@ msgid "--quiet"
 msgstr ""
 
 #. Tag: para
-#, no-c-format
-msgid "disables all logging."
+#, no-c-format, fuzzy
+msgid "disable all logging."
 msgstr "disabilita tutti i messaggi di log"
 
 #. Tag: term
@@ -319,9 +319,19 @@ msgid "specifies the directory to source <application>Publican</application> fil
 msgstr ""
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<command>publican rename</command>"
-msgstr "<command>publican clean</command>"
+#, no-c-format
+msgid "--pdftool=s"
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "Override the tool to use when creating PDFs. Valid options are wkhtmltopdf and fop."
+msgstr ""
+
+#. Tag: term
+#, no-c-format
+msgid "<command>publican clean</command>"
+msgstr "<command>publican clean_ids</command>"
 
 #. Tag: para
 #, no-c-format
@@ -330,7 +340,7 @@ msgstr "rimuove le cartelle temporanee dalla cartella di un documento"
 
 #. Tag: term
 #, no-c-format
-msgid "<command>publican clean_ids</command>"
+msgid "<command>publican clean</command>"
 msgstr "<command>publican clean_ids</command>"
 
 #. Tag: para
@@ -349,8 +359,8 @@ msgid "removes local copies of remote books that are part of a set."
 msgstr "rimuove le copie locali di libri remoti, parte di un set"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<command>publican rename</command>"
+#, no-c-format
+msgid "<command>publican create</command>"
 msgstr "<command>publican clean</command>"
 
 #. Tag: para
@@ -644,8 +654,8 @@ msgid "builds the package as a binary RPM package rather than a source RPM packa
 msgstr "crea il pacchetto RPM binario invece del pacchetto SRPM sorgente"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "publican print_unused"
+#, no-c-format
+msgid "publican print_banned"
 msgstr "publican print_banned"
 
 #. Tag: para
@@ -674,13 +684,13 @@ msgid "displays a tree of the XML files included in a document."
 msgstr "viusalizza la struttura ad albero dei file XML di un documento"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "publican print_unused"
+#, no-c-format
+msgid "publican print_banned"
 msgstr "publican print_banned"
 
 #. Tag: para
-#, no-c-format
-msgid "prints a list of the XML files <emphasis>not</emphasis> included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
+#, no-c-format, fuzzy
+msgid "prints a list of the image files <emphasis>not</emphasis> referenced by an <sgmltag>&lt;imagedata&gt;</sgmltag> tag in a book, article, or set."
 msgstr "visualizza l'elenco dei file XML <emphasis>non</emphasis> inclusi in tag <sgmltag>&lt;xi:include&gt;</sgmltag> in un libro, articolo o set"
 
 #. Tag: term
@@ -689,8 +699,8 @@ msgid "publican print_unused_images"
 msgstr "publican print_unused"
 
 #. Tag: para
-#, no-c-format
-msgid "prints a list of the XML files <emphasis>not</emphasis> included with the <sgmltag>&lt;xi:include&gt;</sgmltag> tag in a book, article, or set."
+#, no-c-format, fuzzy
+msgid "prints a list of the image files <emphasis>not</emphasis> referenced by an <sgmltag>&lt;imagedata&gt;</sgmltag> tag in a book, article, or set."
 msgstr "visualizza l'elenco dei file XML <emphasis>non</emphasis> inclusi in tag <sgmltag>&lt;xi:include&gt;</sgmltag> in un libro, articolo o set"
 
 #. Tag: term
@@ -709,8 +719,8 @@ msgid "the language of the document to remove (mandatory)."
 msgstr "il documento in lingua da rimuovere (necessario)"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<command>publican rename</command>"
+#, no-c-format
+msgid "<command>publican create</command>"
 msgstr "<command>publican clean</command>"
 
 #. Tag: para
