--- a/publican/Users_Guide/it-IT/Publican_cfg_parameters.po
+++ b/publican/Users_Guide/it-IT/Publican_cfg_parameters.po
@@ -68,8 +68,8 @@ msgid "the edition number for this documentation, set by the <option>--edition</
 msgstr "il numero di edizione della documentazione, impostato con l'opzione <option>--edition</option>"
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>type</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>dtd_type</parameter>"
 msgstr "<parameter>type</parameter>"
 
 #. Tag: para
@@ -238,8 +238,8 @@ msgid "the default language for a <application>Publican</application>-managed we
 msgstr "la lingua predefinita per il sito web gestito via <application>Publican</application>. Le tabelle dei contenuti, per le altre lingue, sono collegate ai documenti in lingua predefinita in assenza di traduzioni. (Per impostazione: <literal>en-US</literal> — inglese degli Stati Uniti d'America)"
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>doc_url</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>src_url</parameter>"
 msgstr "<parameter>doc_url</parameter>"
 
 #. Tag: para
@@ -268,8 +268,8 @@ msgid "a package that the desktop package requires, for example, a documentation
 msgstr "un pacchetto richiesto dal pacchetto desktop, per esempio, un pacchetto di menu del desktop, per documentazione. Fare riferimento alla <xref linkend=\"desktop_menus\" />."
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>dtdver</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>dtd_uri</parameter>"
 msgstr "<parameter>dtdver</parameter>"
 
 #. Tag: para
@@ -278,8 +278,8 @@ msgid "the version of the DocBook XML <firstterm>Document Type Definition</first
 msgstr "la versione del <firstterm>DTD</firstterm> (Document Type Definition) di DocBook XML su cui si basa il progetto. (Per impostazione: <literal>4.5</literal>)"
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>type</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>dtd_type</parameter>"
 msgstr "<parameter>type</parameter>"
 
 #. Tag: para
@@ -293,8 +293,8 @@ msgid "This parameter is only permitted in a brand."
 msgstr ""
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>dtdver</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>dtd_uri</parameter>"
 msgstr "<parameter>dtdver</parameter>"
 
 #. Tag: para
@@ -353,8 +353,8 @@ msgid "translations to ignore."
 msgstr "traduzioni da ignorare"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>mainfile</parameter>"
+#, no-c-format
+msgid "<parameter>info_file</parameter>"
 msgstr "<parameter>mainfile</parameter>"
 
 #. Tag: para
@@ -363,8 +363,8 @@ msgid "override the default Info file. Use the full filename without the path."
 msgstr ""
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>release</parameter>"
+#, no-c-format
+msgid "<parameter>license</parameter>"
 msgstr "<parameter>license</parameter>"
 
 #. Tag: para
@@ -373,8 +373,8 @@ msgid "the license this package uses. (Default: GNU Free Documentation License).
 msgstr "la licenza usata dal pacchetto. (Per impostazione: GNU Free Documentation License)"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>mainfile</parameter>"
+#, no-c-format
+msgid "<parameter>info_file</parameter>"
 msgstr "<parameter>mainfile</parameter>"
 
 #. Tag: para
@@ -428,8 +428,8 @@ msgid "URL for the product to which this document applies. (Default: <literal>ht
 msgstr "URL del prodotto cui si applica il documento. (Per impostazione: <literal>https://fedorahosted.org/publican</literal>)"
 
 #. Tag: term
-#, no-c-format, fuzzy
-msgid "<parameter>release</parameter>"
+#, no-c-format
+msgid "<parameter>license</parameter>"
 msgstr "<parameter>license</parameter>"
 
 #. Tag: para
@@ -498,9 +498,9 @@ msgid "override the default sort weighting for books in a <application>Publican<
 msgstr ""
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>os_ver</parameter>"
-msgstr "<parameter>src_url</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>src_url</parameter>"
+msgstr "<parameter>doc_url</parameter>"
 
 #. Tag: para
 #, no-c-format
