--- a/publican/Users_Guide/it-IT/Websites.po
+++ b/publican/Users_Guide/it-IT/Websites.po
@@ -72,8 +72,8 @@ msgid "<filename>site_overrides.css</filename> — a CSS stylesheet that overrid
 msgstr "<filename>site_overrides.css</filename> — un foglio di stile CSS alternativo a quelli presenti in <filename>interactive.css</filename>, per offrire stili specifici per il sito. Questo file non è creato dal processo di creazione del sito, ma deve essere aggiunto manualmente, successivamente o fornito dalla <firstterm>home page</firstterm> del sito."
 
 #. Tag: para
-#, no-c-format
-msgid "<filename>toc.js</filename> — a JavaScript script that directs visitors to localized content based on the locale set in their browser and which controls the presentation of the navigation menu."
+#, no-c-format, fuzzy
+msgid "<filename>defualt.js</filename> — a JavaScript script that directs visitors to localized content based on the locale set in their browser and which controls the presentation of the navigation menu."
 msgstr "<filename>toc.js</filename> — uno script JavaScript che in base all'impostazione nel browser, indirizza i visitatori al contenuto in lingua locale e che controlla la presentazione del menu di navigazione."
 
 #. Tag: para
