--- a/publican/Users_Guide/it-IT/Websites_structure_manual.po
+++ b/publican/Users_Guide/it-IT/Websites_structure_manual.po
@@ -227,6 +227,21 @@ msgstr "Normalmente, <application>Publican</application> aggiorna le tabelle dei
 
 #. Tag: para
 #, no-c-format
+msgid "Optionally, override the default JavaScript for the site with the <parameter>toc_js</parameter> parameter, for example:"
+msgstr ""
+
+#. Tag: programlisting
+#, no-c-format
+msgid "toc_js: \"mybrand/scripts/megafoo.js\""
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "This file will be symlinked as <parameter>toc_path</parameter>/toc.js with the <command>publican update_site</command> command. This path should be relative to the <parameter>toc_path</parameter> parameter."
+msgstr ""
+
+#. Tag: para
+#, no-c-format
 msgid "Create an empty file named <filename>site_overrides.css</filename> in the directory that you specified with <option>doc_path</option> (the directory that contains <filename>interactive.css</filename> and the various language directories). If you want to use site-specific styles to override those provided by <filename>interactive.css</filename>, you can add a <filename>site_overrides.css</filename> to the document that provides the site <firstterm>home page</firstterm> — refer to <xref linkend=\"sect-Users_Guide-Website-homepage-manual\" />. If you do not want to use site-specific styles, the empty file you add here will prevent 404 errors on your server. On a Linux system, change into the directory that you specified with <option>doc_path</option> and run:"
 msgstr "Creare un file vuoto di nome  <filename>site_overrides.css</filename> nella cartella specificata con l'opzione <option>doc_path</option> (la cartella che contiene il foglio di stile <filename>interactive.css</filename> e le cartelle linguistiche). Se si desidera usare degli stili specifici alternativi a quelli forniti da <filename>interactive.css</filename>, aggiungere un file <filename>site_overrides.css</filename> al documento che fornisce la <firstterm>home page</firstterm>  del sito — vedere la <xref linkend=\"sect-Users_Guide-Website-homepage-manual\" />. Se non si usa uno stile specifico, il file vuoto aggiunto impedirà la comparsa dell'errore 404 sul server. Su un sistema Linux, spostarsi nella cartella specificata con l'opzione <option>doc_path</option> ed eseguire:"
 
