--- a/publican/Changes
+++ b/publican/Changes
@@ -19,6 +19,7 @@
   - Allow brands to ship web templates. Add site config toc_js. BZ #956935
   - Add pdftool option to build for pdf tool control. BZ #953728
   - Add default mapping for language to locale. BZ #844202
+  - Fix ID missing from translated Revision History. BZ #911462
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
