--- a/publican/Users_Guide/it-IT/Files_in_the_Brand_Directory.po
+++ b/publican/Users_Guide/it-IT/Files_in_the_Brand_Directory.po
@@ -132,8 +132,8 @@ msgid "specifies the release number for the brand. When you create the brand wit
 msgstr "specifica il numero di release per il brand. Quando si crea un brand con il comando <command>publican create_brand</command>, la release è impostata a <literal>0</literal>. Aggiornare il numero di release nei file <filename>publican.cfg</filename> e <filename>publican-<replaceable>brand</replaceable>.spec</filename> , in occasione della preparazione di una nuova release per un brand esistente."
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>web_dir</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>web_req</parameter>"
 msgstr "<parameter>brand</parameter>"
 
 #. Tag: para
@@ -142,8 +142,8 @@ msgid "when set to <literal>type: brand</literal>, this parameter identifies the
 msgstr "impostato a <literal>type: brand</literal>, questo parametro identifica il contenuto nella cartella come un brand invece che come un libro, articolo o set."
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>web_dir</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>web_req</parameter>"
 msgstr "<parameter>brand</parameter>"
 
 #. Tag: para
@@ -162,8 +162,8 @@ msgid "the full path for the <application>Publican</application> site configurat
 msgstr ""
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>web_dir</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>web_req</parameter>"
 msgstr "<parameter>brand</parameter>"
 
 #. Tag: para
@@ -172,8 +172,8 @@ msgid "the full path to where files will be installed. You must also set <replac
 msgstr ""
 
 #. Tag: term
-#, no-c-format
-msgid "<parameter>web_dir</parameter>"
+#, no-c-format, fuzzy
+msgid "<parameter>web_req</parameter>"
 msgstr "<parameter>brand</parameter>"
 
 #. Tag: para
