--- a/publican/Users_Guide/it-IT/Revision_History.po
+++ b/publican/Users_Guide/it-IT/Revision_History.po
@@ -23,6 +23,31 @@ msgstr "Cronologia revisioni"
 
 #. Tag: firstname
 #, no-c-format
+msgid "Jeff"
+msgstr "Jeff"
+
+#. Tag: surname
+#, no-c-format
+msgid "Fearn"
+msgstr "Fearn"
+
+#. Tag: member
+#, no-c-format
+msgid "Publican 3.2.0"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Document site config option 'toc_js'"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Document build option --pdftool"
+msgstr ""
+
+#. Tag: firstname
+#, no-c-format
 msgid "Norman"
 msgstr ""
 
@@ -36,19 +61,9 @@ msgstr ""
 msgid "Add Section on Installing Publican on OpenSuse 12"
 msgstr ""
 
-#. Tag: firstname
-#, no-c-format
-msgid "Jeff"
-msgstr "Jeff"
-
-#. Tag: surname
-#, no-c-format
-msgid "Fearn"
-msgstr "Fearn"
-
 #. Tag: member
 #, no-c-format
-msgid "Publican 3.0"
+msgid "Publican 3.2.0"
 msgstr ""
 
 #. Tag: firstname
