--- a/publican/Changes
+++ b/publican/Changes
@@ -24,6 +24,7 @@
   - Removed show_unknown parameter and associated code. BZ #915428
   - Add img_dir parameter to override images directory. BZ #919481
   - Support all DocBook conditionals. BZ #919486
+  - Flag spaces in product number as invalid. BZ #973895
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
