web_format syntax

--- a/publican/Changes
+++ b/publican/Changes
@@ -25,6 +25,8 @@
   - Add img_dir parameter to override images directory. BZ #919481
   - Support all DocBook conditionals. BZ #919486
   - Flag spaces in product number as invalid. BZ #973895
+  - Standardized prompts in commands. BZ #880456
+  - Updated web_formats publican.cfg info BZ #839141
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
