--- a/publican/Changes
+++ b/publican/Changes
@@ -27,6 +27,8 @@
   - Flag spaces in product number as invalid. BZ #973895
   - Standardized prompts in commands. BZ #880456
   - Updated web_formats publican.cfg info BZ #839141
+  - Replaced 'home page' with 'product or version page' BZ #921803
+
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
