Remove duplicate brand files from base install. BZ #966143

--- a/publican/Changes
+++ b/publican/Changes
@@ -29,7 +29,7 @@
   - Updated web_formats publican.cfg info BZ #839141
   - Replaced 'home page' with 'product or version page' BZ #921803
   - Replaced a broken link to CPAN with a working link BZ# 973461
-
+  - Remove duplicate brand files from base install. BZ #966143
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
