--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,5 @@
 3.2.0 UNRELEASED
+  - Add spaces to web-spec.xsl to work around newer libxml2 eating white space in spec files  BZ #982424
   - Fix typos in common content BZ #952490 #974918
   - Stop menu bouncing. BZ #953716
   - Fix ID missing from admonitions. BZ #966494
