--- a/publican/Changes
+++ b/publican/Changes
@@ -31,6 +31,8 @@
   - Replaced a broken link to CPAN with a working link BZ# 973461
   - Remove duplicate brand files from base install. BZ #966143
   - Add extras_dir parameter to override extras directory. BZ #953998
+  - Corrected strings referring to defaults. BZ #923511
+  - Add Mac OSX Lion installation instructions. BZ #979229
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
