Fix long title layout on cover page in PDF. BZ #956934

--- a/publican/Changes
+++ b/publican/Changes
@@ -35,6 +35,7 @@
   - Fix PDF ignoring cover logo. BZ #974353
   - Add trans_drop action to freeze source language for translation. BZ #887707
   - Fix empty pot files not being deleted. BZ #961413
+  - Fix long title layout on cover page in PDF. BZ #956934
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
