--- a/publican/Changes
+++ b/publican/Changes
@@ -40,6 +40,7 @@
   - Add file handle limit workaround to FAQ BZ #952476
   - Support CDATA tags. BZ #958343
   - Fix UTF8 image names getting mangled in publish. BZ #953618
+  - Add wkhtmltopdf_opts parameter to pass options to wkhtmltopdf. BZ #951290
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
