--- a/publican/Changes
+++ b/publican/Changes
@@ -43,6 +43,7 @@
   - Add wkhtmltopdf_opts parameter to pass options to wkhtmltopdf. BZ #951290
   - Fix edition missing on PDF cover pages. BZ #956940
   - Support XML in add_revision member. BZ #862465
+  - Fix duplicate footnotes in bibliography. BZ #653447
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
